[workspace]
members = [
  "crates/anthropic-types",
  "crates/openai-types",
  "crates/schema-filter",
  "crates/metrics",
  "crates/telemetry",
  "llm-proxy",
  "test",
]
resolver = "2"

[workspace.package]
edition = "2024"
authors = ["Thomas Harmon <thomas.alan.harmon@gmail.com>"]
license = "UNLICENSED"
publish = false
version = "0.1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true


[workspace.dependencies]
openai-types = { path = "./crates/openai-types" }
anthropic-types = { path = "./crates/anthropic-types" }
telemetry = { path = "./crates/telemetry" }
metrics = { path = "./crates/metrics" }
llm-proxy = { path = "./llm-proxy" }

anyhow = "1.0.98"
axum-core = "0.5.2"
axum-server = "0.7.2"
base64 = "0.22.1"
bytes = "1.10.1"
chrono = "0.4.40"
clap = { version = "4.5.37", features = ["derive"] }
compact_str = "0.9.0"
config = "0.15.11"
derive_builder = "0.20.2"
derive_more = { version = "2.0.1", features = ['as_ref', 'constructor', 'debug', 'deref', 'display', 'from', 'from_str'] }
displaydoc = "0.2.5"
futures = "0.3.31"
governor = "0.8.1"
heck = "0.5.0"
http = "1.3"
http-body-util = "0.1.3"
humantime-serde = "1.1.1"
hyper = { version = "1.6.0", features = ['full'] }
hyper-util = "0.1.11"
indexmap = "2.9.0"
isocountry = "0.3.2"
itertools = "0.14.0"
json-patch = "4.0.0"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
meltdown = "0.3.2"
mime = "0.3.17"
minio-rsc = "0.2.3"
nonempty-collections = "0.3.0"
openapiv3 = "2.0"
opentelemetry = { version = "0.29.1" }
opentelemetry_sdk = { version = "0.29.0", features = ["rt-tokio"] }
opentelemetry-appender-tracing = "0.29.1"
opentelemetry-otlp = { version = "0.29.0" }
opentelemetry-semantic-conventions = "0.29.0"
pin-project = "1.1.10"
pin-project-lite = "0.2.16"
prometheus = { version = "0.13.4", default-features = false }
regex = "1.11.1"
reqwest = { version = "0.12.15", features = [ "json", "stream", "multipart", "native-tls"], default-features = false }
rust_decimal = "1.37.1"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
serde_path_to_error = "0.1.17"
serde_repr = "0.1.20"
serde_with = "3.12.0"
serde_yaml = "0.9.34"
serde_yml = "0.0.12"
serial_test = "3.2.0"
sqlx = "0.8.5"
strum = "0.27.1"
# TODO @tom: Open PR, message maintainers, and link it here.
stubr = { git = "https://github.com/tomharmon/stubr" }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ['full'] }
tokio-stream = "0.1.17"
tokio-util = "0.7.15"
tower = "0.5.2"
tower_governor = "0.7.0"
tower-http = { version = "0.6.2", git = "https://github.com/tower-rs/tower-http.git", branch = "main" }
tracing = "0.1.41"
tracing-opentelemetry = "0.30.0"
tracing-subscriber = "0.3.19"
url = "2.5.4"
utoipa = "5.3.1"
uuid = { version = "1.16.0", features = ["serde", "v7"] }