[workspace]
members = [ "crates/mock-server",
    "crates/schema-filter",
    "crates/telemetry",
    "crates/weighted-balance",
    "llm-proxy",
    "scripts/test",
    "scripts/trace-test-client",
]
resolver = "2"
default-members = ["llm-proxy"]

[workspace.package]
edition = "2024"
authors = ["Thomas Harmon <thomas.alan.harmon@gmail.com>"]
license = "UNLICENSED"
publish = false
version = "0.1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = { level = "allow" }
missing_panics_doc = { level = "allow" }
struct_field_names = { level = "allow" }

[workspace.dependencies]
telemetry = { path = "./crates/telemetry" }
llm-proxy = { path = "./llm-proxy" }
weighted-balance = { path = "./crates/weighted-balance" }

# TODO: @tom: submit upstream PR
anthropic-ai-sdk = { version = "0.2.2", git = "https://github.com/tomharmon/anthropic-sdk-rs.git", branch = "add-serde-impls" }
anyhow = "1.0.98"
async-openai = { version = "0.28.1" }
axum-core = "0.5.2"
axum-server = "0.7.2"
base64 = "0.22.1"
bytes = "1.10.1"
cfg-if = "1.0.0"
chrono = "0.4.40"
clap = { version = "4.5.37", features = ["derive"] }
compact_str = "0.9.0"
config = "0.15.11"
derive_more = { version = "2.0.1", features = [ 'as_ref', 'constructor', 'debug', 'deref', 'display', 'from', 'from_str', ] }
displaydoc = "0.2.5"
dotenvy = { version = "0.15.7"}
eventsource-stream = "0.2.3"
futures = "0.3.31"
governor = "0.8.1"
heck = "0.5.0"
http = "1.3"
http-body = "1.0.1"
http-body-util = "0.1.3"
humantime-serde = "1.1.1"
hyper = { version = "1.6.0", features = ['full'] }
hyper-util = "0.1.11"
indexmap = "2.9.0"
isocountry = "0.3.2"
jemallocator = "0.5.4"
json-patch = "4.0.0"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
meltdown = "0.3.2"
mime = "0.3.17"
nonempty-collections = "0.3.0"
openapiv3 = "2.0"
opentelemetry = { version = "0.29.1" }
opentelemetry_sdk = { version = "0.29.0", features = ["rt-tokio"] }
opentelemetry-appender-tracing = "0.29.1"
opentelemetry-http = "0.29.0"
opentelemetry-otlp = { version = "0.29.0" }
opentelemetry-semantic-conventions = "0.29.0"
opentelemetry-stdout = { version = "0.29.0" }
opentelemetry-system-metrics = { version = "0.4.0", git = "https://github.com/tomharmon/opentelemetry-system-metrics.git", branch = "task/add-gpu-feature" }
pin-project-lite = "0.2.16"
pretty_assertions = "1.4.1"
r2d2 = "0.8.10"
rand = "0.9.1"
redis = "0.27.6"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = [ "json", "stream", "multipart", "native-tls", ], default-features = false }
reqwest-eventsource = "0.6.0"
rust_decimal = "1.37.1"
rustc-hash = "2.1.1"
rusty-s3 = "0.7.0"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
serde_path_to_error = "0.1.17"
serde_with = "3.12.0"
serde_yml = "0.0.12"
serial_test = "3.2.0"
strum = "0.27.1"
stubr = { git = "https://github.com/tomharmon/stubr" }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ['full'] }
tokio-stream = "0.1.17"
tokio-test = "0.4.4"
tokio-util = "0.7.15"
tower = "0.5.2"
tower_governor = { version = "0.7.0", features = [] }
tower-http = { version = "0.6.3" }
tower-otel-http-metrics = { git = "https://github.com/tomharmon/tower-otel-http-metrics.git", branch = "feat/custom-attributes-via-extractors" }
tracing = "0.1.41"
tracing-opentelemetry = "0.30.0"
tracing-subscriber = "0.3.19"
typed-builder = "0.21.0"
workspace_root = "0.1.2"
url = "2.5.4"
utoipa = "5.3.1"
uuid = { version = "1.16.0", features = ["serde", "v7"] }
