[tool.poetry]
name = "helicone"
version = "1.0.12"
description = "A Python wrapper for the OpenAI API that logs all requests to Helicone."
license = "Apache-2.0"
authors = ["Helicone, Inc. <help@helicone.ai>"]
homepage = "https://www.helicone.ai"
repository = "https://github.com/helicone/helicone/helicone-python"

[tool.poetry.dependencies]
python = ">=3.8.1"
openai = "^0.27.0"
lockfile = "^0.12.2"
pyhumps = "^3.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.9"
