[package]
name = "llm-proxy"
version = "0.1.0"
edition = "2024"
authors = [ "Thomas Harmon <thomas.alan.harmon@gmail.com>" ]
default-run = "llm-proxy"

[dependencies]
openai-types = { workspace = true }
anthropic-types = { workspace = true }

axum-server = { workspace = true, features = ["tls-rustls"] }

bytes = { workspace = true, features = ['serde'] }
chrono = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
derive_more = { workspace = true, features = ['as_ref', 'constructor', 'debug', 'deref', 'display', 'from', 'from_str'] }
displaydoc = { workspace = true }
futures = { workspace = true }
governor = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
humantime-serde = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true, features = ['server-auto', 'server-graceful', 'tokio'] }
indexmap = { workspace = true, features = ['serde'] }
isocountry = { workspace = true }
json-patch = { workspace = true }
meltdown = { workspace = true }
minio-rsc = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
pin-project = { workspace = true }
pin-project-lite = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true, features = ['derive', 'rc'] }
serde_json = { workspace = true }
serde_path_to_error = { workspace = true }
serde_with = { workspace = true }
serde_yml = { workspace = true }
sqlx = { workspace = true, features = ['default', 'runtime-tokio', 'chrono', 'postgres', 'uuid']}
strum = { workspace = true, features = ["derive"]  }
stubr = { workspace = true, optional = true }
telemetry = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true, features = ['sync'] }
tower = { workspace = true, features = ['full']}
tower_governor = { workspace = true }
tower-http = { workspace = true, features = ['default', 'auth', 'catch-panic', 'add-extension'] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ['env-filter', 'std'] }
url = { workspace = true, features = ['serde'] }
utoipa = { workspace = true }
uuid = { workspace = true, features = ["serde", "v7"] }

[features]
default = []
testing = ["dep:stubr"]

[[test]]
name = "default_target"
required-features = ["testing"]
