[package]
name = "llm-proxy"
version = "0.1.0"
edition = "2024"
authors = [ "Thomas Harmon <thomas.alan.harmon@gmail.com>" ]
default-run = "llm-proxy"

[dependencies]
openai-types = { workspace = true }
anthropic-types = { workspace = true }

axum-core = { workspace = true }
axum-server = { workspace = true, features = ["tls-rustls"] }
bytes = { workspace = true, features = ['serde'] }
chrono = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
compact_str = { workspace = true, features = ['serde'] }
derive_more = { workspace = true, features = ['as_ref', 'constructor', 'debug', 'deref', 'deref_mut', 'display', 'from', 'from_str'] }
displaydoc = { workspace = true }
futures = { workspace = true }
governor = { workspace = true }
heck = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
humantime-serde = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true, features = ['server-auto', 'server-graceful', 'tokio'] }
indexmap = { workspace = true, features = ['serde'] }
isocountry = { workspace = true }
json-patch = { workspace = true }
meltdown = { workspace = true }
mime = { workspace = true }
minio-rsc = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
pin-project = { workspace = true }
pin-project-lite = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true, features = ['derive', 'rc'] }
serde_json = { workspace = true }
serde_path_to_error = { workspace = true }
serde_with = { workspace = true }
serde_yml = { workspace = true }
sqlx = { workspace = true, features = ['default', 'runtime-tokio', 'chrono', 'postgres', 'uuid']}
strum = { workspace = true, features = ["derive"]  }
stubr = { workspace = true, optional = true }
telemetry = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true, features = ['sync'] }
tokio-util = { workspace = true }
tower = { workspace = true, features = ['full']}
tower_governor = { workspace = true }
tower-http = { workspace = true, features = ['default', 'auth', 'catch-panic', 'add-extension', 'normalize-path', 'request-id', 'trace', 'util'] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ['env-filter', 'std'] }
url = { workspace = true, features = ['serde'] }
utoipa = { workspace = true }
uuid = { workspace = true, features = ["serde", "v7"] }

env_logger = { workspace = true, optional = true }
log = "0.4"
[features]
default = []
testing = ["dep:stubr", "dep:env_logger"]

[[test]]
name = "default_target"
required-features = ["testing"]
