[package]
name = "llm-proxy"
version = "0.1.0"
edition.workspace = true
authors = [ "Thomas Harmon <thomas.alan.harmon@gmail.com>" ]
repository = "https://github.com/Helicone/helicone-router"
default-run = "llm-proxy"
description = "A high-performance LLM proxy router for load balancing, monitoring, and managing API requests to various language model providers"
homepage = "https://helix.helicone.ai"

[dependencies]

anthropic-ai-sdk = { workspace = true }
async-openai = { workspace = true }
axum-core = { workspace = true }
axum-server = { workspace = true, features = ["tls-rustls"] }
brakes = { workspace = true }
bytes = { workspace = true, features = ['serde'] }
cfg-if = { workspace = true }
chrono = { workspace = true, features = ['default', 'serde'] }
clap = { workspace = true }
config = { workspace = true }
compact_str = { workspace = true, features = ['serde'] }
derive_more = { workspace = true, features = ['as_ref', 'constructor', 'debug', 'deref', 'deref_mut', 'display', 'from', 'from_str'] }
displaydoc = { workspace = true }
eventsource-stream = { workspace = true }
futures = { workspace = true }
governor = { workspace = true }
heck = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
humantime-serde = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true, features = ['server-auto', 'server-graceful', 'tokio'] }
indexmap = { workspace = true, features = ['serde'] }
isocountry = { workspace = true }
json-patch = { workspace = true }
meltdown = { workspace = true }
mime = { workspace = true }
nonempty-collections = { workspace = true, features = ["serde"] }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
opentelemetry-system-metrics = { workspace = true }
pin-project-lite = { workspace = true }
redis = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
reqwest-eventsource = { workspace = true }
rustc-hash = { workspace = true }
rust_decimal = { workspace = true }
rusty-s3 = { workspace = true }
r2d2 = { workspace = true }
serde = { workspace = true, features = ['derive', 'rc'] }
serde_json = { workspace = true }
serde_path_to_error = { workspace = true }
serde_with = { workspace = true }
serde_yml = { workspace = true }
serial_test = { workspace = true, optional = true }
strum = { workspace = true, features = ["derive"]  }
stubr = { workspace = true, optional = true }
telemetry = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true, features = ['sync'] }
tokio-util = { workspace = true }
tower = { workspace = true, features = ['full']}
tower-http = { workspace = true, features = ['default', 'auth', 'catch-panic', 'add-extension', 'normalize-path', 'request-id', 'trace', 'util', 'sensitive-headers'] }
tower-otel-http-metrics = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry.workspace = true
tracing-subscriber = { workspace = true, features = ['env-filter', 'std'] }
typed-builder = { workspace = true }
weighted-balance = { workspace = true }
url = { workspace = true, features = ['serde'] }
utoipa = { workspace = true }
uuid = { workspace = true, features = ["serde", "v7"] }
dotenvy = { version = "0.15.7"}

[features]
default = []
testing = ["dep:stubr", "dep:serial_test"]

[lints]
workspace = true

[[test]]
name = "single_provider"
required-features = ["testing"]

[[test]]
name = "load_balance"
required-features = ["testing"]

[[test]]
name = "logger"
required-features = ["testing"]

[[test]]
name = "weighted_balance"
required-features = ["testing"]

[[test]]
name = "health_monitor"
required-features = ["testing"]

[[test]]
name = "rate_limit"
required-features = ["testing"]

[[test]]
name = "passthrough"
required-features = ["testing"]
