[package]
name = "rama-helicone-router"
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
openai-types = { workspace = true }
anthropic-types = { workspace = true }

bytes = { workspace = true, features = ['serde'] }
chrono = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
derive_more = { workspace = true, features = ['as_ref', 'constructor', 'debug', 'deref', 'display', 'from', 'from_str'] }
displaydoc = { workspace = true }
futures = { workspace = true }
governor = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
humantime-serde = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true, features = ['server-auto', 'server-graceful', 'tokio'] }
indexmap = { workspace = true, features = ['serde'] }
isocountry = { workspace = true }
json-patch = { workspace = true }
meltdown = { workspace = true }
minio-rsc = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
pin-project-lite = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true, features = ['derive', 'rc'] }
serde_json = { workspace = true }
serde_path_to_error = { workspace = true }
serde_with = { workspace = true }
sqlx = { workspace = true, features = ['default', 'runtime-tokio', 'chrono', 'postgres', 'uuid']}
strum = { workspace = true, features = ["derive"]  }
telemetry = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true, features = ['full']}
tower_governor = { workspace = true }
tower-http = { workspace = true, features = ['default', 'auth', 'catch-panic'] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ['env-filter', 'std'] }
url = { workspace = true, features = ['serde'] }
utoipa = { workspace = true }
uuid = { workspace = true, features = ["serde", "v7"] }

rama = { workspace = true, features = ["default", "http-full", "net", "tcp", "rustls"] }
itertools = { workspace = true }
serde_yml = { workspace = true }
stubr = { workspace = true, optional = true }

[features]
default = []
testing = []