[package]
name = "anthropic-types"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true, features = ["base64", "std", "macros"] }
serde_json = { workspace = true }
serde_repr = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true, features = ["json", "multipart"] }
thiserror = { workspace = true }
typed-builder = { workspace = true }
futures = { workspace = true }