[package]
name = "schema-filter"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
openapiv3 = { workspace = true }
anyhow = { workspace = true }
indexmap = { workspace = true }

[lints]
workspace = true