[package]
name = "schema-filter"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
description = "OpenAPI schema filtering utilities for the LLM proxy router"
homepage = "https://helix.helicone.ai"
publish = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
indexmap = { workspace = true }
openapiv3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = { workspace = true }
serde_yml = { workspace = true }

[lints]
workspace = true