[package]
name = "telemetry"
edition = { workspace = true }
publish = false
version = { workspace = true }

[dependencies]
http.workspace = true
log-panics.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-semantic-conventions.workspace = true
opentelemetry-otlp = { workspace = true, features = ['default', 'grpc-tonic'] }
opentelemetry-appender-tracing.workspace = true
serde.workspace = true
tower-http = { workspace = true, features = ['request-id'] }
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
thiserror = { workspace = true }
