[package]
name = "telemetry"
edition = { workspace = true }
publish = false
version = { workspace = true }
description = "OpenTelemetry telemetry configuration and utilities for the LLM proxy router"
homepage = "https://helix.helicone.ai"

[dependencies]
http.workspace = true
log-panics.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-semantic-conventions.workspace = true
opentelemetry-otlp = { workspace = true, features = ['default', 'grpc-tonic'] }
opentelemetry-appender-tracing.workspace = true
opentelemetry-http.workspace = true
serde.workspace = true
tower-http = { workspace = true, features = ['request-id'] }
tower = { workspace = true}
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "std",
    "json",
] }
thiserror = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
