[package]
name = "test"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Test scripts for the LLM proxy router"
homepage = "https://helix.helicone.ai"
publish = false

[dependencies]
async-openai = { workspace = true }
bytes = { workspace = true, features = ['serde'] }
clap = { version = "4.0", features = ["derive"] }
dotenvy = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
llm-proxy = { workspace = true }
rand = "0.8"
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["signal"] }