[package]
name = "trace-test-client"
version = "0.1.0"
edition = { workspace = true }
license.workspace = true
publish = false
authors.workspace = true
autobenches = false
default-run = "trace-test-client"
description = "OpenTelemetry trace test client for the LLM proxy router"
homepage = "https://docs.helicone.ai/ai-gateway"

[dependencies]
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["full"] }
hyper-util = { workspace = true, features = ["full"] }
tokio = { workspace = true, features = ["full"] }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-http = { workspace = true }
opentelemetry-stdout = { workspace = true, features = ["trace", "logs"] }
opentelemetry-semantic-conventions = { workspace = true }
opentelemetry-appender-tracing = { workspace = true}
opentelemetry-otlp = { workspace = true, features = ["grpc-tonic"] }
tracing = { workspace = true, features = ["std"]}
tracing-subscriber = { workspace = true, features = ["env-filter","registry", "std", "fmt"] }
http = { workspace = true }