[tool.poetry]
name = "helicone_async"
version = "1.1.1"
description = "A Python wrapper for logging llm traces directly to Helicone, by passing the proxy, with OpenLLMetry."
license = "Apache-2.0"
authors = ["Helicone, Inc. <help@helicone.ai>"]
homepage = "https://www.helicone.ai"
repository = "https://github.com/helicone/helicone/helicone-python-async"

[tool.poetry.dependencies]
python = ">=3.11.0,<4"
opentelemetry-exporter-otlp-proto-http = "^1.27.0"
traceloop-sdk = "^0.33.1"
h11 = ">=0.16.0"
protobuf = ">=5.28.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
